fix text truncation (#96)

--- a/libraries/JGUZDV.Blazor.Components/src/Inputs/MultiSelect.razor.css
+++ b/libraries/JGUZDV.Blazor.Components/src/Inputs/MultiSelect.razor.css
@@ -36,6 +36,11 @@
     filter: brightness(0.95);
     cursor: pointer;
 }
+
 .clickable {
     cursor: pointer;
+}
+
+.mw-0 {
+    min-width: 0;
 }
